DASH-120 - Not showing proper dashboard items in Chrome browser
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313060 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/webapp/css/dashboard.css
+++ b/tool/src/webapp/css/dashboard.css
@@ -72,10 +72,14 @@ table thead th {
 }
 
 table thead {
-    position: absolute;
-    left: -10000px; /*render off viewport*/
+   position: absolute;
+   clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
+   clip: rect(1px, 1px, 1px, 1px);
+   overflow:hidden;
+   width:1px;
+   height:1px;
 }
-
+}
 table tr:hover {
     
 }
