--- a/tool/src/webapp/css/dashboard.css
+++ b/tool/src/webapp/css/dashboard.css
@@ -97,7 +97,7 @@ table tr.newRow:hover {
     border-bottom-left-radius: 10px;
     padding: 10px;
     margin-bottom: 5px;
-    font-size: 90%;
+    font-size: 100%;
     position:relative
 }
 
@@ -273,13 +273,16 @@ a.itemLink {
 .itemLabel{
     display:block;
     color:#555;
-    font-size:.9em;
     float:left;
     padding:5px 5px 0 0px;
 }
 .itemLabel:before{
     content:" - ";
 }
+.itemCollection .itemLabel{
+    padding:5px 0 0 0;
+}
+
 /*file exensions to match*/
 .doc, .rtf, .docx, .docm, .dotx, .dotm {
     background: url(../../../../library/image/sakai/word.gif) center left no-repeat !important
