DASH-147 - add simple pager to item collections (aggregated posts)
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313109 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/webapp/css/dashboard.css
+++ b/tool/src/webapp/css/dashboard.css
@@ -489,3 +489,18 @@ ul.tabPanel{
 .mainPanel{
     position:relative
 }
+.getMore{
+    padding:10px;
+    text-align:center
+}
+
+.getMore a{
+        -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    text-decoration:none;
+    padding:5px;
+    background: #cceeff;
+    text-align:center;
+    margin:5px;
+}      
