DASH-274 - initial checkin with JQ Mobile view
git-svn-id: https://source.sakaiproject.org/svn/dashboard/branches/DASH-269@313481 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/webapp/css/dashboard.css
+++ b/tool/src/webapp/css/dashboard.css
@@ -67,7 +67,8 @@ h3.withNav, #motdTextDiv h3, #motdTextDiv h4{
     right: 3px;
     top: 63px;
 }
-.pager {
+
+.pagerCell .pager {
     width:100%;
     color: #aaa;
     text-align: right;
