--- a/tool/src/webapp/jqm/css/mob-dash.css
+++ b/tool/src/webapp/jqm/css/mob-dash.css
@@ -182,11 +182,12 @@ components of an item in the schedule view
     left:10px;
 }
 /* title label*/
-#schedPanel .row-fluid .two .itemLabel{
+#schedPanel .row-fluid .two .itemLabel, #schedPanel .row-fluid .activeCell .itemLabel{
     display:block;
     margin-top:9px;
     font-weight:bold;
 }
+
 .itemLabel:before {
     content: "";
 }
@@ -249,7 +250,7 @@ components of an item in the event view
     right:10px;
 }
 #newsPanel .row-fluid .five a{
-    margin: 0 15px;
+    
 }
 
 #itemHolder .row-fluid {
@@ -270,14 +271,15 @@ components of an item in the event view
 }
 
 #itemHolder .row-fluid div.action a{
-    margin: 0 15px;
+
 }
 .siteLink {
     text-transform:uppercase;
     font-weight:normal !important
 }
-.row-fluid a {
-    color:#173E8F !important
+.row-fluid a, #itemHolder a {
+    color:#173E8F !important;
+    text-decoration:none
 }
 
 .activeCell {
@@ -316,7 +318,33 @@ components of an item in the event view
     position: relative;
 }
 
-.getMore a {
+.moreInfo a,.getMore a {
+    font-size:11px;
+    padding:7px 5px 6px 5px;
     color:#173E8F !important;
     font-weight:bold;
+    background: #f6f6f5 !important;
+    background: -moz-linear-gradient(top, #f6f6f5 0%, #e0e0e0 93%, #e0e0e0 97%, #e9e9e9 100%) !important;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f6f6f5), color-stop(93%,#e0e0e0), color-stop(97%,#e0e0e0), color-stop(100%,#e9e9e9)) !important;
+    background: -webkit-linear-gradient(top, #f6f6f5 0%,#e0e0e0 93%,#e0e0e0 97%,#e9e9e9 100%) !important;
+    background: -o-linear-gradient(top, #f6f6f5 0%,#e0e0e0 93%,#e0e0e0 97%,#e9e9e9 100%) !important;
+    background: -ms-linear-gradient(top, #f6f6f5 0%,#e0e0e0 93%,#e0e0e0 97%,#e9e9e9 100%) !important;
+    background: linear-gradient(top, #f6f6f5 0%,#e0e0e0 93%,#e0e0e0 97%,#e9e9e9 100%) !important;
+    border: 1px solid #E0E3E5 !important;
+    box-shadow: 0 1px 1px 0 #999999 !important;
+    border-radius: 3px;
 }
+.results .block, .attachList {
+    line-height:130%;
+}
+.results .block +.metadataLine, .results .attachList +.metadataLine {
+    border-top:1px solid #ccc;
+    padding:15px 0 3px 4px;
+    text-align:center;
+    margin:0 -10px
+}
+/* hiding "hide" and "view in site" controls*/
+.action a:nth-child(2), a.hideThis, a[href*="directtool"] {
+    display:none
+}
+
