--- a/tool/src/webapp/jqm/css/mob-dash.css
+++ b/tool/src/webapp/jqm/css/mob-dash.css
@@ -145,8 +145,11 @@ h3 {
 .starContainer{height: 34px;width: 26px;}
 .itemHeaderBack {position:absolute;top:10px;left:10px;width:20px !important;text-decoration:none}
 
-.listHeader, .pagerCell {
+.listHeader {
     display:none;
+}
+.pagerCell {
+    z-index:1000
 }
 #messagePanel, #messageError {
     z-index:10;
