DASH-288 - adding paging. Note: old pager is left in for debugging, starring has not been hidden yet
git-svn-id: https://source.sakaiproject.org/svn/dashboard/branches/DASH-269@313531 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/webapp/jqm/css/mob-dash.css
+++ b/tool/src/webapp/jqm/css/mob-dash.css
@@ -410,12 +410,22 @@ ul.attachList li a{
 }
 .itemList {
     margin-bottom:100px;
-    outline:1px solid lime
 }
-#newsMoreDummyButton{
+
+.pagerCell {
+    /*
+display:none
+*/
+}
+
+#newsMoreDummyButton, #calendarMoreDummyButton{
     position:absolute;
-    bottom:0;
-    width:100%;
+    left:25%;
+    right:25%;
+    bottom:-45px;
+    width:50%;
+    margin:0 auto;
     text-align:center;
     z-index:1000;
+    text-decoration:none
 }
