DASH-288 - hide wicket pager from mobile view, hide starring actions
git-svn-id: https://source.sakaiproject.org/svn/dashboard/branches/DASH-269@313532 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/webapp/jqm/css/mob-dash.css
+++ b/tool/src/webapp/jqm/css/mob-dash.css
@@ -149,7 +149,7 @@ h3 {
     display:none;
 }
 .pagerCell {
-    z-index:1000
+     display:none;
 }
 #messagePanel, #messageError {
     z-index:10;
@@ -412,12 +412,6 @@ ul.attachList li a{
     margin-bottom:100px;
 }
 
-.pagerCell {
-    /*
-display:none
-*/
-}
-
 #newsMoreDummyButton, #calendarMoreDummyButton{
     position:absolute;
     left:25%;
@@ -428,4 +422,7 @@ display:none
     text-align:center;
     z-index:1000;
     text-decoration:none
+}
+.action a {
+    display:none
 }
