DASH-297 - move download button so no overlap with metadata
git-svn-id: https://source.sakaiproject.org/svn/dashboard/branches/DASH-269@313541 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/webapp/jqm/css/mob-dash.css
+++ b/tool/src/webapp/jqm/css/mob-dash.css
@@ -342,6 +342,12 @@ components of an item in the event view
     box-shadow: 0 1px 1px 0 #999999 !important;
     border-radius: 3px;
 }
+#itemHolder .results .moreInfo > li > a {
+    position: absolute;
+    right: -7px;
+    top: -11px;
+    white-space: nowrap;
+}
 .results .block, .attachList {
     line-height:130%;
 }
