DASH-312 - remove vspace from MOTD display
git-svn-id: https://source.sakaiproject.org/svn/dashboard/trunk@313586 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/tool/src/webapp/css/dashboard.css
+++ b/tool/src/webapp/css/dashboard.css
@@ -434,7 +434,7 @@ wrappers for all panels - receive the focus after a tab click
     margin-top:0;
 }
 #motdTextDiv .motdText{
-    padding: 10px 0;
+    padding: 0;
 }
 
 #motdTextDivDismiss{
